--- a/requirements.yaml
+++ b/requirements.yaml
@@ -15,7 +15,7 @@ implicit:
   - Сайт должен работать по протоколу https
   - Доступ к содержимому корзины доступен только в текущей сессии
   - При добавлении товара в корзину должен быть отправлен запрос на сервер
-  - При переключении страниц должен быть запрос на сервер
+  - У всех соответствующих действий (пагинация, добавление/удаление должен быть запрос на сервер
   - При удалении товара из корзины должен быть запрос на сервер
   - В поле для ввода цены можно вводить только положительные целые числа
   - При пустом поле цены от, и заполненном, до, должны быть показаны товары от 0 до указанной цены
@@ -47,5 +47,6 @@ implicit:
   - При обновлении страницы должны сохраняться добавленные товары и фильтры
   - Можно выбрать только один вариант цвета за раз
   - На странице товара должно указываться количество оставшегося товара
-  - В фильтре есть возможность указать только товары с наличии или нет
+  - В фильтре есть возможность указать только товары в наличии или нет
   - У каждого товара должно быть описание и характеристики
+  - У необратимых действих должно быть всплывающее окно с подтверждением действия
