added more test-cases

--- a/requirements.yaml
+++ b/requirements.yaml
@@ -12,11 +12,10 @@ non-functional:
   - Сайт должен быть способен обрабатывать большое количество трафика.
   - Сайт должен быть доступен на различных устройствах.
 implicit:
+  - Должна быть возможность оформить товар
   - Сайт должен работать по протоколу https
   - Доступ к содержимому корзины доступен только в текущей сессии
-  - При добавлении товара в корзину должен быть отправлен запрос на сервер
   - У всех соответствующих действий (пагинация, добавление/удаление должен быть запрос на сервер
-  - При удалении товара из корзины должен быть запрос на сервер
   - В поле для ввода цены можно вводить только положительные целые числа
   - При пустом поле цены от, и заполненном, до, должны быть показаны товары от 0 до указанной цены
   - При пустом поле цены до, и заполненном, от, должны быть показаны товары от указанной цены
@@ -26,7 +25,8 @@ implicit:
   - При количестве товаров меньше чем на 2 страницы, кнопки далее/предыдущая должны быть заблокированны
   - У фильтров должна быть кнопка очистить все фильтры
   - При выборе определенной категории товара, должны присутстовать только связанные с данной категорией бренды
-  - При смене категории, все бренды должны очищаться
+  - При смене категории, выбранные ранее бренды не связанные с текущей категорией должны игнорироваться
+  - Выбранные бренды связанные со своей категорией должны сохраняться при переходе между категориями
   - При вводе невалидных данных в поля, должны указываться соответствующие ошибки
   - В sessionStorage должен храниться id сессии пользователя
   - На странице не должно быть битых ссылок и картинок
@@ -35,7 +35,7 @@ implicit:
   - Можно удалять товары из корзины по одному
   - В корзине должно быть указано количество и цена каждого добавленного товара
   - Все действия связанные с отправкой данных и переключения страниц, должны происходить без перезагрузки
-  - При остутствии товара в корзине, на странцие корзины должно быть выведено сообшение "Ваша корзина пуста"
+  - При остутствии товара в корзине, на странцие корзины должно быть выведено сообшение "Ваша корзина пуста" и кнопка "Перейти к покупкам"
   - Должны отсутствовать ошибки и сообщения в консоли
   - В списке категории можно выбрать пустую опцию, для отображения всего товара
   - В корзине должна быть кнопка полной очистки
@@ -46,7 +46,3 @@ implicit:
   - В корзине должна быть кнопка выхода из корзины
   - При обновлении страницы должны сохраняться добавленные товары и фильтры
   - Можно выбрать только один вариант цвета за раз
-  - На странице товара должно указываться количество оставшегося товара
-  - В фильтре есть возможность указать только товары в наличии или нет
-  - У каждого товара должно быть описание и характеристики
-  - У необратимых действих должно быть всплывающее окно с подтверждением действия
