--- a/test-cases.yaml
+++ b/test-cases.yaml
@@ -43,9 +43,9 @@
   test-data: |
     ---------
   steps:
-    - Ввести название товара (iphone) в поле поиска 
+    - Ввести название любого товара (прим. iphone) в поле поиска 
   expected-result: |
-     На текущей странице отображаются товары имеющие "iphone" в названии
+     На текущей странице отображаются товары имеющие введенное значение в названии
      
 - summary: |
     Поиск товара с пустым полем для поиска
@@ -74,6 +74,33 @@
      На текущей странице отображается сообщение "товар не найден"
      
 - summary: |
+    Поиск c активными фильтрами
+  requirement: |
+    Пользователь должен иметь возможность искать товары по ключевому слову или категории.
+  prerequisites: |
+    Открыта страница store, имеется любая фильтрация:
+    - (прим: по категории laptops, бренд - samsung, in-stock - true)
+  test-data: |
+    Диапазон цен от 10 до 2355
+  steps:
+    - Ввести в поле для поиска любой товар (прим. Samsung Galaxy Book)
+  expected-result: |
+     На текущей странице отображается введенный товар
+     
+- summary: |
+    Поиск c по одному символу
+  requirement: |
+    Пользователь должен иметь возможность искать товары по ключевому слову или категории.
+  prerequisites: |
+    Открыта страница store
+  test-data: |
+    -----------
+  steps:
+    - Ввести в поле для поиска M
+  expected-result: |
+     На текущей странице отображаются все товары начинающиеся с M независимо от регистра
+     
+- summary: |
     Поиск товара по категории
   requirement: |
     Пользователь должен иметь возможность искать товары по ключевому слову или категории.
@@ -83,9 +110,9 @@
     ---------
   steps:
     - Нажать на дропдаун "Category/Категории"
-    - Выбрать groceries/продукты
+    - Выбрать любую категорию
   expected-result: |
-     На текущей странице отображаются товары относящиеся к категории groceries/продукты
+     На текущей странице отображаются товары относящиеся к выбранной категории
      
 - summary: |
     Поиск товара по пустой категории
@@ -100,9 +127,121 @@
     - Выбрать пустой вариант
   expected-result: |
      На текущей странице отображаются все товары
+
      
 - summary: |
-    Фильтрация отображаемых на странице товаров в наличии
+    Фильтрация отображаемых на странице товаров по бренду
+  requirement: |
+    - Пользователь должен иметь возможность фильтровать товары по цене, цвету, размеру и т.д.
+  prerequisites: |
+    Открыта страница store
+  test-data: |
+    ----------	
+  steps:
+    - Выбрать любой бренд
+  expected-result: |
+     В каталоге товаров отображаются только товары выбранного бренда
+     
+- summary: |
+    Фильтрация категории и бренда отображаемых товарв
+  requirement: |
+    - Пользователь должен иметь возможность фильтровать товары по цене, цвету, размеру и т.д.
+  prerequisites: |
+    Открыта страница store
+  test-data: |
+    ----------	
+  steps:
+    - Выбрать любую категорию
+    - Выбрать любой бренд
+  expected-result: |
+     В каталоге товаров отображаются только товары выбранной категории и бренда
+     
+- summary: |
+    Фильтрация товаров по цене с положительными числами
+  requirement: |
+    - Пользователь должен иметь возможность фильтровать товары по цене, цвету, размеру и т.д.
+  prerequisites: |
+    Открыта страница store
+  test-data: |
+    После - 1
+    До - 5000000
+  steps:
+    - Ввести в поле цены данные из test-data
+  expected-result: |
+     В каталоге товаров отображаются все товары с ценой в диапазоне от 1 до 5000000
+     
+- summary: |
+    Фильтрация товаров по цене с отрицательными числами
+  requirement: |
+    - Пользователь должен иметь возможность фильтровать товары по цене, цвету, размеру и т.д.
+  prerequisites: |
+    Открыта страница store
+  test-data: |
+    После - -1000
+    До - - 1
+  steps:
+    - Ввести в поле цены данные из test-data
+  expected-result: |
+     Отображаются товары всех диапазонов, отрицательные числа игнорируются
+     
+- summary: |
+    Фильтрация товаров по цене с числами через точку
+  requirement: |
+    - Пользователь должен иметь возможность фильтровать товары по цене, цвету, размеру и т.д.
+  prerequisites: |
+    Открыта страница store
+  test-data: |
+    После - 0.5
+    До - 100.50
+  steps:
+    - Ввести в поле цены данные из test-data
+  expected-result: |
+     Данные не введены, поля принимают только целые числа
+     
+- summary: |
+    Фильтрация товаров по цене от 0
+  requirement: |
+    - Пользователь должен иметь возможность фильтровать товары по цене, цвету, размеру и т.д.
+  prerequisites: |
+    Открыта страница store
+  test-data: |
+    После - 0
+    До - 7698
+  steps:
+    - Ввести в поле цены данные из test-data
+  expected-result: |
+     В каталоге товаров отображаются все товары до 7698
+     
+- summary: 
+    Поиск в диапазоне с ведущими нулями
+  requirement: |
+    - Пользователь должен иметь возможность фильтровать товары по цене, цвету, размеру и т.д.
+  prerequisites: |
+    Открыта страница store
+  test-data: |
+    После - 0123
+    До - 01000
+  steps:
+    - Ввести в поле цены данные из test-data
+  expected-result: |
+     В каталоге товаров отображаются все товары от 123 до 1000
+     
+- summary: |
+    Ввод не числовых значений в поле для поиска
+  requirement: |
+    - Пользователь должен иметь возможность фильтровать товары по цене, цвету, размеру и т.д.
+  prerequisites: |
+    Открыта страница store
+  test-data: |
+    После - QWert%*&
+    До - АБВ*?:
+  steps:
+    - Ввести в поле цены данные из test-data
+  expected-result: |
+     Данные не введены, поля принимают только числовые значения
+
+- summary: |
+    Фильтрация отображаемых на странице товаров в наличии используя все фильтры
   requirement: |
     - Пользователь должен иметь возможность фильтровать товары по цене, цвету, размеру и т.д.
   prerequisites: |
@@ -110,7 +249,7 @@
   test-data: |
     цена:
 	- от 100
-    	- до 5000	
+    	- до 1000	
   steps:
     - Выбрать бренд - Vintage Apparel
     - Ввести в поле ввода диапазона цен данные из test-data
@@ -126,14 +265,14 @@
   requirement: |
     - Пользователь должен иметь возможность фильтровать товары по цене, цвету, размеру и т.д.
   prerequisites: |
-    Открыта страница store, выбрана категория groceries
+    Открыта страница store, выбрана любая категория
   test-data: |
     ---------
   steps:
     - Убрать выделение с чек-бокса "в наличии"
     - Выбрать произвольную фильтрацию в диапазоне положительных чисел
   expected-result: |
-     На текущей странице отображаются все groceries отсутствующие в наличии на складе в указанном диапазоне,
+     На текущей странице отображаются все товары выбранной категории отсутствующие в наличии на складе в указанном диапазоне,
      при отсутствии таковых, отображается сообщение "товар не найден"
      
 - summary: |
@@ -161,7 +300,8 @@
     - Открыть страницу https://hexlet-products-store.vercel.app/
   expected-result: |
      Странице открылась менее чем за 6000 мс
-     
+
+   
 - summary: |
     Работа веб-магазина по протоколу HTTPS
   requirement: |
@@ -227,7 +367,8 @@
   expected-result: |
      Веб-магазин открывается и отображается одинакого на всех браузерах,
      функционал (фильтрация, пагинация, открытие товара, добавление удаление товара) отрабатывает на всех браузерах
-     
+
+
 - summary: |
     Работа сайта при большом количестве одновременных запросах
   requirement: |
@@ -240,7 +381,8 @@
     - Отправить одновременно более 1000 запросов на открытие страницы https://hexlet-products-store.vercel.app/
   expected-result: |
      Скорость отклика при открытии страницы не снижается при большом количестве трафика
-     
+
+
 - summary: |
     Доступность сайта на различных устройствах
   requirement: |
@@ -256,4 +398,237 @@
      Веб-магазин доступен на каждом устройстве из test-data, 
      функционал (фильтрация, пагинация, открытие товара, добавление удаление товара) отрабатывает на всех устройствах
 
+- summary: |
+    Оформление добавленного в корзину товара
+  requirement: |
+    - Должна быть возможность оформить товар
+  prerequisites: |
+    Открыта страница store
+  test-data: |
+    ------
+  steps:
+    - Добавить любой товар в корзину и перейти в нее
+    - Нажать на "Оформить товар"
+  expected-result: |
+     Открылось модальное окно оформления товара
+     
+- summary: |
+    Наличие запросов на сервер при соответствующих действиях
+  requirement: |
+    - У всех соответствующих действий (пагинация, добавление/удаление должен быть запрос на сервер
+  prerequisites: |
+    Открыта страница store
+  test-data: |
+    ------
+  steps:
+    - Открыть devTools вкладку network
+    - Добавить любой товар в корзину
+    - Перейти на следующую страницу нажав "Следующая"
+    - Перейти в корзину и нажать на "очистить корзину"
+    - Перейти на страницу store
+  expected-result: |
+     При всех действиях отправляются соответствующие запросы на сервер без ошибок
+     
+- summary: |
+    Наличие всех категорий и брендов в фильтре при первичной загрузке сайта
+  requirement: |
+    - В фильтре при первой загрузке должны быть доступны все категории и бренды товаров
+  prerequisites: |
+    Открыт любой браузер
+  test-data: |
+    ------
+  steps:
+    - Открыть https://hexlet-products-store.vercel.app/
+    - Открыть список категорий
+  expected-result: |
+     Доступны все категории и бренды имеющиеся в фильтре
+     
+- summary: |
+    Блокировка кнопок пагинации с содержимым на одну страницу
+  requirement: |
+    - При количестве товаров меньше чем на 2 страницы, кнопки далее/предыдущая должны быть заблокированы
+  prerequisites: |
+    открыта страница store
+  test-data: |
+    ------
+  steps:
+    - Выбрать любую категорию и бренд с кол-вом товаров вмещающихся на одну странциу
+  expected-result: |
+     Кнопки далее/предыдущая заблокированы
+     
+- summary: |
+    Обнуление значений всех фильтров
+  requirement: |
+    - У фильтров должна быть кнопка очистить все фильтры
+  prerequisites: |
+    открыта страница store
+  test-data: |
+    ------
+  steps:
+    - Выбрать в фильтре произвольное кол-во значений
+    - Нажать на "очистить все фильтры"
+  expected-result: |
+     Все значения в фильтрах обнулились и вернулись к исходному состоянию,
+     на странице отображаются все имеющиеся товары
+     
+- summary: |
+    Отсутствие товаров несвязанных с выбранной категорией
+  requirement: |
+    - При выборе определенной категории товара, должны присутстовать только связанные с данной категорией бренды
+  prerequisites: |
+    открыта страница store
+  test-data: |
+    ------
+  steps:
+    - Выбрать в фильтре любую категорию
+  expected-result: |
+     В фильтре присутствуют бренды только относящиеся к выбранной категории товаров
+     
+- summary: |
+    Смена категории при наличии выбранных брендов
+  requirement: |
+    - При смене категории, выбранные ранее бренды не связанные с текущей категорией должны игнорироваться
+  prerequisites: |
+    открыта страница store
+  test-data: |
+    ------
+  steps:
+    - Выбрать в фильтре любой бренд
+    - Выбрать категорию товара несвязанную с выбранным брендом
+  expected-result: |
+     Отобразились все товары выбранной категории, выбранные ранее бренды, несвязанные с текущей категорией игнорируются
+     
+- summary: |
+    Сохранение выбранных брендов между категориями
+  requirement: |
+    - Выбранные бренды связанные со своей категорией должны сохраняться при переходе между категориями
+  prerequisites: |
+    открыта страница store
+  test-data: |
+    ------
+  steps:
+    - Выбрать любую категорию
+    - Выбрать в фильтре любой бренд данной категории
+    - Выбрать категорию товара несвязанную с выбранным брендом
+    - Вернуться к категории из шага 1
+  expected-result: |
+     В фильтре брендов имеются ранее выбранные значения из пункта 2
+     
+- summary: |
+    Сохранение id сессии пользователя 
+  requirement: |
+    - В sessionStorage должен храниться id сессии пользователя
+  prerequisites: |
+    открыта страница store
+  test-data: |
+    ------
+  steps:
+    - Открыть devTools вкладку application
+    - Открыть session storage
+  expected-result: |
+     В session storage присутствует id сессии текущего пользователя
+     
+- summary: |
+    Наличие одного заголовка h1 на страницу
+  requirement: |
+    - На странице должен быть только один заголовок h1
+  prerequisites: |
+    открыта страница store
+  test-data: |
+    ------
+  steps:
+    - Открыть devTools вкладку elements
+    - Нажать alt+f
+    - Ввести h1
+  expected-result: |
+     Вывелся один или менее элементов с тегом h1
+     
+- summary: |
+    Смена языка веб-магазина
+  requirement: |
+    - На сайте должна быть реализована смена языка
+  prerequisites: |
+    открыта страница store, выбран язык ru
+  test-data: |
+    ------
+  steps:
+    - Сменить язык на en
+    - Сменить язык на ru
+  expected-result: |
+    - Язык всего веб-магазины сменился на en без перезагрузки
+    - Язык всего веб-магазины сменился на ru без перезагрузки, весь текст (кроме названия и брендов товаров) переведен
     
+- summary: |
+    Удаление одного товара из корзины
+  requirement: |
+    - Можно удалять товары из корзины по одному
+  prerequisites: |
+    открыта страница store
+  test-data: |
+    ------
+  steps:
+    - Добавить два любых товара в корзину и перейти в нее
+    - Нажать на кнопку "удалить товар" рядом с одним из добавленных товаров
+  expected-result: |
+    - Выбранный товар удален, второй остался в корзине
+    
+- summary: |
+    Наличие информации о добавленных товарах в корзине
+  requirement: |
+    - В корзине должно быть указано количество и цена каждого добавленного товара
+  prerequisites: |
+    открыта страница basket/корзина, 
+    в корзине присутствует товар
+  test-data: |
+    ------
+  steps:
+    - ---
+  expected-result: |
+    Имеется информация:
+    	- количество добавленного товара
+    	- цена товара (со скидкой если имеется)
+    	- название и бренд товара
+    	
+- summary: |
+    Сообщение при отсутствии товаров в корзине
+  requirement: |
+    - При остутствии товара в корзине, на странцие корзины должно быть выведено сообшение "Ваша корзина пуста" и кнопка "Перейти к покупкам"
+  prerequisites: |
+    открыта страница store, в корзине отсутствуют товары
+  test-data: |
+    ------
+  steps:
+    - Открыть корзину
+  expected-result: |
+    Сообщение "Ваша корзина пуста" и кнопка "Перейти к покупкам"
+    
+- summary: |
+    Подтверждение действий при удалении/оформлении товара
+  requirement: |
+    - При удалении и добавлении товара должны всплывать модальные окна для подтверждения действия
+  prerequisites: |
+    открыта страница basket, в корзине имеется товар
+  test-data: |
+    ------
+  steps:
+    - Удалить один товар
+    - Очистить всю корзину
+    - Перейти на страницу store и добавить любой товар в корзину
+    - Перейти в корзину и нажать на "оформить товар"
+  expected-result: |
+    При каждом действии всплывает модальное окно для подтверждения/отмены действия
+    
+- summary: |
+    Сохранение данных фильтров при обновлении/перезагрузки страницы
+  requirement: |
+    - При обновлении страницы должны сохраняться добавленные товары и фильтры
+  prerequisites: |
+    открыта страница store
+  test-data: |
+    ------
+  steps:
+    - Выбрать произвольные настройки фильтров
+    - Перезагрузить страницу
+  expected-result: |
+    ВЫбранные на шаге 1 фильтры сохранились
+     
