--- a/test-cases.yaml
+++ b/test-cases.yaml
@@ -2,6 +2,7 @@
 
 - summary: |
     Просмотр содержимого на странице открытого товара
+  status: pass
   requirement: |
     Пользователь должен иметь возможность просматривать товары и просматривать подробную информацию о товаре.
   prerequisites: |
@@ -15,12 +16,29 @@
     	- цена
     	- кол-во оставшегося товара
     	- скидка при наличии
+    	- рейтинг товара
     	- описание товара
     	- кнопка добавить в корзину
     	- хештег типа товара
+    	
+- summary: |
+    Переключение фото на странице с товаром
+  status: fail
+  requirement: |
+    Пользователь должен иметь возможность просматривать товары и просматривать подробную информацию о товаре.
+  prerequisites: |
+    Открыта страница store
+  test-data: |
+    ---------
+  steps:
+    - Выбрать любой товар и нажать на его фото
+    - Нажать на одно из фото из списка
+  expected-result: |
+    Главное фото изменилось на выбранное
 
 - summary: |
     Добавление товара в корзину
+  status: pass
   requirement: |
     Пользователь должен иметь возможность добавлять товары в корзину и просматривать содержимое корзины.
   prerequisites: |
@@ -36,6 +54,7 @@
 
 - summary: |
     Поиск товара по ключевому слову
+  status: pass
   requirement: |
     Пользователь должен иметь возможность искать товары по ключевому слову или категории.
   prerequisites: |
@@ -49,6 +68,7 @@
      
 - summary: |
     Поиск товара с пустым полем для поиска
+  status: pass  
   requirement: |
     Пользователь должен иметь возможность искать товары по ключевому слову или категории.
   prerequisites: |
@@ -62,6 +82,7 @@
      
 - summary: |
     Поиск по ключевому слову с несуществующим названием товара
+  status: pass  
   requirement: |
     Пользователь должен иметь возможность искать товары по ключевому слову или категории.
   prerequisites: |
@@ -75,6 +96,7 @@
      
 - summary: |
     Поиск c активными фильтрами
+  status: pass  
   requirement: |
     Пользователь должен иметь возможность искать товары по ключевому слову или категории.
   prerequisites: |
@@ -89,6 +111,7 @@
      
 - summary: |
     Поиск c по одному символу
+  status: pass  
   requirement: |
     Пользователь должен иметь возможность искать товары по ключевому слову или категории.
   prerequisites: |
@@ -98,10 +121,11 @@
   steps:
     - Ввести в поле для поиска M
   expected-result: |
-     На текущей странице отображаются все товары начинающиеся с M независимо от регистра
+     На текущей странице отображаются все товары имеющие M независимо от регистра
      
 - summary: |
     Поиск товара по категории
+  status: pass  
   requirement: |
     Пользователь должен иметь возможность искать товары по ключевому слову или категории.
   prerequisites: |
@@ -116,6 +140,7 @@
      
 - summary: |
     Поиск товара по пустой категории
+  status: fail  
   requirement: |
     Пользователь должен иметь возможность искать товары по ключевому слову или категории.
   prerequisites: |
@@ -131,6 +156,7 @@
      
 - summary: |
     Фильтрация отображаемых на странице товаров по бренду
+  status: pass  
   requirement: |
     - Пользователь должен иметь возможность фильтровать товары по цене, цвету, размеру и т.д.
   prerequisites: |
@@ -144,6 +170,7 @@
      
 - summary: |
     Фильтрация категории и бренда отображаемых товарв
+  status: pass  
   requirement: |
     - Пользователь должен иметь возможность фильтровать товары по цене, цвету, размеру и т.д.
   prerequisites: |
@@ -158,27 +185,44 @@
      
 - summary: |
     Фильтрация товаров по цене с положительными числами
+  status: fail
   requirement: |
     - Пользователь должен иметь возможность фильтровать товары по цене, цвету, размеру и т.д.
   prerequisites: |
     Открыта страница store
   test-data: |
     После - 1
-    До - 5000000
+    До - 899
   steps:
     - Ввести в поле цены данные из test-data
   expected-result: |
-     В каталоге товаров отображаются все товары с ценой в диапазоне от 1 до 5000000
+     В каталоге товаров отображаются все товары с ценой в диапазоне от 1 до 899
+     
+- summary: |
+    Фильтрация товаров по цене с учетом скидки
+  status: fail
+  requirement: |
+    - Пользователь должен иметь возможность фильтровать товары по цене, цвету, размеру и т.д.
+  prerequisites: |
+    Открыта страница store
+  test-data: |
+    После - 500
+    До - 1000
+  steps:
+    - Ввести в поле цены данные из test-data
+  expected-result: |
+     В каталоге товаров отображаются все товары с учетом скидки от 500 до 1000
      
 - summary: |
     Фильтрация товаров по цене с отрицательными числами
+  status: fail  
   requirement: |
     - Пользователь должен иметь возможность фильтровать товары по цене, цвету, размеру и т.д.
   prerequisites: |
     Открыта страница store
   test-data: |
     После - -1000
-    До - - 1
+    До - - 10000
   steps:
     - Ввести в поле цены данные из test-data
   expected-result: |
@@ -186,6 +230,7 @@
      
 - summary: |
     Фильтрация товаров по цене с числами через точку
+  status: pass  
   requirement: |
     - Пользователь должен иметь возможность фильтровать товары по цене, цвету, размеру и т.д.
   prerequisites: |
@@ -196,24 +241,41 @@
   steps:
     - Ввести в поле цены данные из test-data
   expected-result: |
-     Данные не введены, поля принимают только целые числа
+     Отображаются все товары от 0.5$ до 100.50$
+     
+- summary: |
+    Фильтрация товаров по цене с числами через запятую
+  status: pass  
+  requirement: |
+    - Пользователь должен иметь возможность фильтровать товары по цене, цвету, размеру и т.д.
+  prerequisites: |
+    Открыта страница store
+  test-data: |
+    После - 10,10
+    До - 1000,50
+  steps:
+    - Ввести в поле цены данные из test-data
+  expected-result: |
+     Запятые не введены, поле является числовым
      
 - summary: |
     Фильтрация товаров по цене от 0
+  status: pass  
   requirement: |
     - Пользователь должен иметь возможность фильтровать товары по цене, цвету, размеру и т.д.
   prerequisites: |
     Открыта страница store
   test-data: |
     После - 0
-    До - 7698
+    До - 10000
   steps:
     - Ввести в поле цены данные из test-data
   expected-result: |
-     В каталоге товаров отображаются все товары до 7698
+     В каталоге товаров отображаются все товары до 10000
      
 - summary: 
     Поиск в диапазоне с ведущими нулями
+  status: pass  
   requirement: |
     - Пользователь должен иметь возможность фильтровать товары по цене, цвету, размеру и т.д.
   prerequisites: |
@@ -228,6 +290,7 @@
      
 - summary: |
     Ввод не числовых значений в поле для поиска
+  status: pass  
   requirement: |
     - Пользователь должен иметь возможность фильтровать товары по цене, цвету, размеру и т.д.
   prerequisites: |
@@ -242,14 +305,15 @@
 
 - summary: |
     Фильтрация отображаемых на странице товаров в наличии используя все фильтры
+  status: fail  
   requirement: |
     - Пользователь должен иметь возможность фильтровать товары по цене, цвету, размеру и т.д.
   prerequisites: |
     Открыта страница store, выбрана категория mens-shirts
   test-data: |
     цена:
-	- от 100
-    	- до 1000	
+	- от 1
+    	- до 25
   steps:
     - Выбрать бренд - Vintage Apparel
     - Ввести в поле ввода диапазона цен данные из test-data
@@ -257,11 +321,12 @@
     - Выбрать размер XL
     - Выбрать товары в наличии
   expected-result: |
-     На текущей странице отображаются мужские футболки в налчии с ценой от 100$ до 5000$, 
+     На текущей странице отображаются мужские футболки в налчии с ценой от 1$ до 25$, 
      красного цвета и размера XL, бренда Vintage Apparel
      
 - summary: |
     Фильтрация товаров отсутствующих в наличии на складе
+  status: pass
   requirement: |
     - Пользователь должен иметь возможность фильтровать товары по цене, цвету, размеру и т.д.
   prerequisites: |
@@ -277,6 +342,7 @@
      
 - summary: |
     Скорость загрузки страниц со скорость интернета выше 10мбит/с
+  status: pass  
   requirement: |
     - Веб-сайт должен быть разработан с учетом удобства использования и оптимизирован для скорости работы.
   prerequisites: |
@@ -290,6 +356,7 @@
      
 - summary: |
     Скорость загрузки страниц со скорость интернета менее 10мбит/с
+  status: pass  
   requirement: |
     - Веб-сайт должен быть разработан с учетом удобства использования и оптимизирован для скорости работы.
   prerequisites: |
@@ -304,6 +371,7 @@
    
 - summary: |
     Работа веб-магазина по протоколу HTTPS
+  status: pass  
   requirement: |
     - Сайт должен быть безопасным и защищать данные пользователя.
     - Сайт должен работать по протоколу https
@@ -318,6 +386,7 @@
      
 - summary: |
     Отсутствие возможности посмотреть содержимое корзины другого пользователя
+  status: pass  
   requirement: |
     - Сайт должен быть безопасным и защищать данные пользователя.
     - Доступ к содержимому корзины доступен только в текущей сессии
@@ -335,6 +404,7 @@
      
 - summary: |
     Наличие адаптива мод мобильные устройства
+  status: fail  
   requirement: |
     - Сайт должен иметь мобильную версию.
   prerequisites: |
@@ -351,6 +421,7 @@
      
 - summary: |
     Работа веб-магазина на различных браузерах последней версии
+  status: pass  
   requirement: |
     - Сайт должен быть протестирован на совместимость с последними версиями браузеров.
   prerequisites: |
@@ -359,7 +430,6 @@
     - Браузер Chrome (last ver)
     - Браузер Firefox (last ver)
     - Браузер Yandex (last ver)
-    - Браузер Safari (last ver)
     - Браузер ME (Last ver)
   steps:
     - Открыть страницу https://hexlet-products-store.vercel.app/
@@ -371,6 +441,7 @@
 
 - summary: |
     Работа сайта при большом количестве одновременных запросах
+  status: fail
   requirement: |
     - Сайт должен быть способен обрабатывать большое количество трафика.
   prerequisites: |
@@ -378,13 +449,15 @@
   test-data: |
     ------
   steps:
-    - Отправить одновременно более 1000 запросов на открытие страницы https://hexlet-products-store.vercel.app/
+    - Отправить одновременно более 1000 запросов на открытие страницы пагинацию
   expected-result: |
-     Скорость отклика при открытии страницы не снижается при большом количестве трафика
+     Скорость отклика при запросе на следующую страницу не снижается при большом количестве трафика,
+     все фото прогружаются
 
 
 - summary: |
     Доступность сайта на различных устройствах
+  status: pass  
   requirement: |
     - Сайт должен быть доступен на различных устройствах.
   prerequisites: |
@@ -400,6 +473,7 @@
 
 - summary: |
     Оформление добавленного в корзину товара
+  status: pass  
   requirement: |
     - Должна быть возможность оформить товар
   prerequisites: |
@@ -413,7 +487,8 @@
      Открылось модальное окно оформления товара
      
 - summary: |
-    Наличие запросов на сервер при соответствующих действиях
+    Наличие запросов без ошибок на сервер при соответствующих действиях
+  status: failed
   requirement: |
     - У всех соответствующих действий (пагинация, добавление/удаление должен быть запрос на сервер
   prerequisites: |
@@ -424,13 +499,15 @@
     - Открыть devTools вкладку network
     - Добавить любой товар в корзину
     - Перейти на следующую страницу нажав "Следующая"
-    - Перейти в корзину и нажать на "очистить корзину"
+    - Перейти в корзину и нажать на оформить товар
     - Перейти на страницу store
   expected-result: |
-     При всех действиях отправляются соответствующие запросы на сервер без ошибок
+     При всех действиях отправляются соответствующие запросы на сервер без ошибок,
+     возможно сохранение товара в session storage
      
 - summary: |
     Наличие всех категорий и брендов в фильтре при первичной загрузке сайта
+  status: failed  
   requirement: |
     - В фильтре при первой загрузке должны быть доступны все категории и бренды товаров
   prerequisites: |
@@ -445,6 +522,7 @@
      
 - summary: |
     Блокировка кнопок пагинации с содержимым на одну страницу
+  status: failed  
   requirement: |
     - При количестве товаров меньше чем на 2 страницы, кнопки далее/предыдущая должны быть заблокированы
   prerequisites: |
@@ -458,6 +536,7 @@
      
 - summary: |
     Обнуление значений всех фильтров
+  status: failed  
   requirement: |
     - У фильтров должна быть кнопка очистить все фильтры
   prerequisites: |
@@ -473,6 +552,7 @@
      
 - summary: |
     Отсутствие товаров несвязанных с выбранной категорией
+   status: failed 
   requirement: |
     - При выборе определенной категории товара, должны присутстовать только связанные с данной категорией бренды
   prerequisites: |
@@ -486,6 +566,7 @@
      
 - summary: |
     Смена категории при наличии выбранных брендов
+  status: failed  
   requirement: |
     - При смене категории, выбранные ранее бренды не связанные с текущей категорией должны игнорироваться
   prerequisites: |
@@ -500,6 +581,7 @@
      
 - summary: |
     Сохранение выбранных брендов между категориями
+  status: pass  
   requirement: |
     - Выбранные бренды связанные со своей категорией должны сохраняться при переходе между категориями
   prerequisites: |
@@ -515,7 +597,8 @@
      В фильтре брендов имеются ранее выбранные значения из пункта 2
      
 - summary: |
-    Сохранение id сессии пользователя 
+    Сохранение id сессии пользователя
+  status: failed  
   requirement: |
     - В sessionStorage должен храниться id сессии пользователя
   prerequisites: |
@@ -530,6 +613,8 @@
      
 - summary: |
     Наличие одного заголовка h1 на страницу
+  status: pass  
+  status:   
   requirement: |
     - На странице должен быть только один заголовок h1
   prerequisites: |
@@ -538,13 +623,14 @@
     ------
   steps:
     - Открыть devTools вкладку elements
-    - Нажать alt+f
+    - Нажать ctrl+f
     - Ввести h1
   expected-result: |
      Вывелся один или менее элементов с тегом h1
      
 - summary: |
     Смена языка веб-магазина
+  status: fail  
   requirement: |
     - На сайте должна быть реализована смена языка
   prerequisites: |
@@ -560,6 +646,7 @@
     
 - summary: |
     Удаление одного товара из корзины
+  status: pass
   requirement: |
     - Можно удалять товары из корзины по одному
   prerequisites: |
@@ -574,10 +661,11 @@
     
 - summary: |
     Наличие информации о добавленных товарах в корзине
+  status: pass  
   requirement: |
     - В корзине должно быть указано количество и цена каждого добавленного товара
   prerequisites: |
-    открыта страница basket/корзина, 
+    открыта страница cart/корзина, 
     в корзине присутствует товар
   test-data: |
     ------
@@ -587,10 +675,11 @@
     Имеется информация:
     	- количество добавленного товара
     	- цена товара (со скидкой если имеется)
-    	- название и бренд товара
+    	- название товара
     	
 - summary: |
     Сообщение при отсутствии товаров в корзине
+  status: fail  
   requirement: |
     - При остутствии товара в корзине, на странцие корзины должно быть выведено сообшение "Ваша корзина пуста" и кнопка "Перейти к покупкам"
   prerequisites: |
@@ -604,22 +693,22 @@
     
 - summary: |
     Подтверждение действий при удалении/оформлении товара
+  status: fail  
   requirement: |
     - При удалении и добавлении товара должны всплывать модальные окна для подтверждения действия
   prerequisites: |
-    открыта страница basket, в корзине имеется товар
+    открыта страница cart, в корзине имеется товар
   test-data: |
     ------
   steps:
-    - Удалить один товар
     - Очистить всю корзину
-    - Перейти на страницу store и добавить любой товар в корзину
     - Перейти в корзину и нажать на "оформить товар"
   expected-result: |
     При каждом действии всплывает модальное окно для подтверждения/отмены действия
     
 - summary: |
     Сохранение данных фильтров при обновлении/перезагрузки страницы
+  status: fail
   requirement: |
     - При обновлении страницы должны сохраняться добавленные товары и фильтры
   prerequisites: |
