--- a/test-cases.yaml
+++ b/test-cases.yaml
@@ -196,7 +196,7 @@
   steps:
     - Ввести в поле цены данные из test-data
   expected-result: |
-     В каталоге товаров отображаются все товары с ценой в диапазоне от 1 до 899
+     В каталоге товаров отображаются все товары с ценой в диапазоне от 1 до 899 включительно
      
 - summary: |
     Фильтрация товаров по цене с учетом скидки
@@ -488,7 +488,7 @@
      
 - summary: |
     Наличие запросов без ошибок на сервер при соответствующих действиях
-  status: failed
+  status: fail
   requirement: |
     - У всех соответствующих действий (пагинация, добавление/удаление должен быть запрос на сервер
   prerequisites: |
@@ -595,21 +595,6 @@
     - Вернуться к категории из шага 1
   expected-result: |
      В фильтре брендов имеются ранее выбранные значения из пункта 2
-     
-- summary: |
-    Сохранение id сессии пользователя
-  status: failed  
-  requirement: |
-    - В sessionStorage должен храниться id сессии пользователя
-  prerequisites: |
-    открыта страница store
-  test-data: |
-    ------
-  steps:
-    - Открыть devTools вкладку application
-    - Открыть session storage
-  expected-result: |
-     В session storage присутствует id сессии текущего пользователя
      
 - summary: |
     Наличие одного заголовка h1 на страницу
