--- a/bugreports.yaml
+++ b/bugreports.yaml
@@ -269,4 +269,15 @@
   actual-result: |
     Отсутствует обозначение/лейбл кол-ва товара на складе в карточках и при подробном просмотре товара
 
+ summary: |
+    На главной странице неактивна ссылка для перехода по лого магазина
+  environment: |
+   v1, ubuntu 22.04, chrome
+  steps-to-reproduce: |
+    - Открыть страницу store
+    - Нажать на "Hexlet store"
+  expected-result: |
+    Кнопка активна, совершен переход на главную страницу
+  actual-result: |
+    Кнопка неактивна
 
